--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -2,35 +2,35 @@ import CardGrid from '@site/src/components/CardGrid';
 
 
 
-<CardGrid items={[surat]}> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
 </CardGrid>
 
-<CardGrid items={[surat2]}> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
 </CardGrid>
 
-<CardGrid items={[surat3]}> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
 </CardGrid>
 
-<CardGrid items={[surat4]}> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
 </CardGrid>
 
-<CardGrid items={[surat5]}> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
