--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -3,36 +3,38 @@ import CardGrid from '@site/src/components/CardGrid';
 
 
 <CardGrid> 
+<Card>
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</CardGrid>
+</Card>
 
-<CardGrid> 
+<Card> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</CardGrid>
+</Card>
 
-<CardGrid> 
+<Card> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</CardGrid>
+</Card>
 
-<CardGrid> 
+<Card> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</CardGrid>
+</Card>
 
-<CardGrid> 
+<Card> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
+</Card>
 </CardGrid>
