--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -1,4 +1,4 @@
-import { CardGrid Card } from '@site/src/components/CardGrid';
+import { CardGrid, Card } from '@site/src/components/CardGrid';
 
 
 
