--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -1,40 +1,40 @@
 import { CardGrid, Card } from '@site/src/components/CardGrid';
 
-
-
 <CardGrid> 
-<Card>
-Alfatihah
-  7 Ayat
-  makiyah
-  pembukaan
+
+<Card
+  number="1"
+  title="Judul Kartu"
+  description="Deskripsi kartu ini."
+  itemCount={5}
+  location="Lokasi Kartu"
+  translation="Terjemahan Kartu"
+>
+  Konten tambahan di dalam kartu.
 </Card>
 
-<Card> 
-Alfatihah
-  7 Ayat
-  makiyah
-  pembukaan
+<Card
+  number="1"
+  title="Judul Kartu"
+  description="Deskripsi kartu ini."
+  itemCount={5}
+  location="Lokasi Kartu"
+  translation="Terjemahan Kartu"
+>
+  Konten tambahan di dalam kartu.
 </Card>
 
-<Card> 
-Alfatihah
-  7 Ayat
-  makiyah
-  pembukaan
+<Card
+  number="1"
+  title="Judul Kartu"
+  description="Deskripsi kartu ini."
+  itemCount={5}
+  location="Lokasi Kartu"
+  translation="Terjemahan Kartu"
+>
+  Konten tambahan di dalam kartu.
 </Card>
 
-<Card> 
-Alfatihah
-  7 Ayat
-  makiyah
-  pembukaan
-</Card>
 
-<Card> 
-Alfatihah
-  7 Ayat
-  makiyah
-  pembukaan
-</Card>
+
 </CardGrid>
